--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'QK'
 - !lcsh 'Plants -- Juvenile literature'
+- GITenberg
 title: Flowers, Shown to the Children
 url: http://www.gutenberg.org/ebooks/40040
